search characteres especiais

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -12,6 +12,7 @@
     &__input {
       border: none;
       border-radius: .3rem 0 0 .3rem;
+      outline: none;
       padding: 1rem;
       width: 100%;
     }
