--- a/src/style/header.css
+++ b/src/style/header.css
@@ -12,6 +12,7 @@
 .header__searchbar__input {
   border: none;
   border-radius: 0.3rem 0 0 0.3rem;
+  outline: none;
   padding: 1rem;
   width: 100%;
 }
