--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -9,6 +9,10 @@
       color: white;
       font-weight: bold;
       list-style: none;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 }
