Adiciona links e funcionalidades

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -46,6 +46,14 @@
       flex-direction: column;
       margin: 0 1rem;
 
+      &__link {
+        text-decoration: none;
+      
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
       &__button {
         background-color: #F5717F;
         border: none;
