--- a/src/scss/highlights.scss
+++ b/src/scss/highlights.scss
@@ -17,28 +17,34 @@
 
 .item-card {
   background-color: white;
-  margin: .5rem;
   display: flex;
   flex-direction: column;
-  padding: 1rem 1rem 0 1rem;
   height: 28rem;
+  margin: .5rem;
+  padding: 1rem;
 
-  &__image {
-    height: 15rem;
-    margin-bottom: 1rem;
-
-    &:hover {
-      cursor: pointer;
+  &__image-link {
+    align-self: center;
+    
+    &__image {
+      height: 15rem;
+      margin-bottom: 1rem;
+      width: 100%;
     }
   }
 
-  &__title {
+
+  &__title-link {
     color: #345C7D;
-    font-size: .8rem;
     padding-bottom: .5rem;
+    text-decoration: none;
+
+    &__title {
+      font-size: .8rem;
+    }
 
     &:hover {
-      cursor: pointer;
+      text-decoration: underline;
     }
   }
 
@@ -61,6 +67,16 @@
     margin: 1rem 0 1rem 0;
     padding: .3rem;
 
+    &__added {
+      align-items: center;
+      background-color: green;
+      border-radius: .3rem;
+      display: flex;
+      justify-content: center;
+      margin: 1rem 0 1rem 0;
+      padding: .3rem;
+    }
+
     &__button {
       background-color: transparent;
       border: none;
@@ -75,6 +91,8 @@
 
     &:hover {
       cursor: pointer;
+      opacity: .8;
+      transition: 1000ms;
     }
   }
 };
