--- a/src/style/highlights.css
+++ b/src/style/highlights.css
@@ -15,26 +15,30 @@
 
 .item-card {
   background-color: white;
-  margin: 0.5rem;
   display: flex;
   flex-direction: column;
-  padding: 1rem 1rem 0 1rem;
   height: 28rem;
+  margin: 0.5rem;
+  padding: 1rem;
 }
-.item-card__image {
+.item-card__image-link {
+  align-self: center;
+}
+.item-card__image-link__image {
   height: 15rem;
   margin-bottom: 1rem;
+  width: 100%;
 }
-.item-card__image:hover {
-  cursor: pointer;
-}
-.item-card__title {
+.item-card__title-link {
   color: #345C7D;
-  font-size: 0.8rem;
   padding-bottom: 0.5rem;
+  text-decoration: none;
 }
-.item-card__title:hover {
-  cursor: pointer;
+.item-card__title-link__title {
+  font-size: 0.8rem;
+}
+.item-card__title-link:hover {
+  text-decoration: underline;
 }
 .item-card__price {
   color: #F5717F;
@@ -53,6 +57,15 @@
   margin: 1rem 0 1rem 0;
   padding: 0.3rem;
 }
+.item-card__button-div__added {
+  align-items: center;
+  background-color: green;
+  border-radius: 0.3rem;
+  display: flex;
+  justify-content: center;
+  margin: 1rem 0 1rem 0;
+  padding: 0.3rem;
+}
 .item-card__button-div__button {
   background-color: transparent;
   border: none;
@@ -65,6 +78,8 @@
 }
 .item-card__button-div:hover {
   cursor: pointer;
+  opacity: 0.8;
+  transition: 1000ms;
 }
 
 /*# sourceMappingURL=highlights.css.map */
