--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,7 +8,7 @@
   &__searchbar {
     display: flex;
     width: 50%;
-
+  
     &__input {
       border: none;
       border-radius: .3rem 0 0 .3rem;
@@ -72,6 +72,34 @@
 
         &:hover {
           cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .header {
+    flex-wrap: wrap;
+    padding: 1rem 0 0 0;
+
+    &__searchbar {
+      order: 3;
+      width: 100%;
+    }
+
+    &__logo {
+      padding-left: 2rem;
+    }
+
+    &__buttons {
+      &__div {
+        &__button {
+            width: 4rem;
+            height: 4rem;
+          &__title {
+            display: none;
+          }
         }
       }
     }
