--- a/src/style/carousel.css
+++ b/src/style/carousel.css
@@ -6,4 +6,10 @@
   width: 100%;
 }
 
+@media screen and (max-width: 800px) {
+  .carousele {
+    height: 10vh;
+  }
+}
+
 /*# sourceMappingURL=carousel.css.map */
