--- a/src/style/header.css
+++ b/src/style/header.css
@@ -65,4 +65,25 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 800px) {
+  .header {
+    flex-wrap: wrap;
+    padding: 1rem 0 0 0;
+  }
+  .header__searchbar {
+    order: 3;
+    width: 100%;
+  }
+  .header__logo {
+    padding-left: 2rem;
+  }
+  .header__buttons__div__button {
+    width: 4rem;
+    height: 4rem;
+  }
+  .header__buttons__div__button__title {
+    display: none;
+  }
+}
+
 /*# sourceMappingURL=header.css.map */
