--- a/src/scss/social.scss
+++ b/src/scss/social.scss
@@ -66,3 +66,15 @@
     }
   }
 }
+
+
+@media screen and (max-width: 900px) {
+  .social {
+    &__navbar {
+      &__list {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+    }
+  }
+}
