--- a/src/scss/newsletter.scss
+++ b/src/scss/newsletter.scss
@@ -51,3 +51,11 @@
     font-weight: bold;
   }
 }
+
+@media screen and (max-width: 900px) {
+  .newsletter {
+    &__bar {
+      width: 80%;
+    }
+  }
+}
